# DummyProjectTestingExercise

./: .gitignore  CMakeLists.txt  README.md  error.cpp  fail.cpp  pass.cpp
